# Scene3D

./: CMakeLists.txt  README.md
res/: shader.vert
src/: main.cpp
src/graphics/: Mesh.cpp  Mesh.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Vertex.hpp
